--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #Cau hinh Email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=thuspamcamnghich@gmail.com
-spring.mail.password=oubduqwvmyeumbuc
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
